# OOD

./: .gitignore  ood_lab_1.sln
Fabric_tests/: Fabric_tests.vcxproj  test.cpp
lab2_observer/: settings.gradle
lab_1/ood_lab_1/: main.cpp  ood_lab_1.vcxproj
lab_1/ood_lab_1_3/: main.cpp  ood_lab_1_3.vcxproj
lab_3/coffee/: Beverages.h  Condiments.h  (+1 more)
lab_4/: IDesigner.h  PictureDraft.h  Shape.h  lab_4.sln  lab_4.vcxproj  lab_4.vcxproj.filters
lab_5/: ChangeStringCommand.h  ConstDocumentItem.cpp  ConstDocumentItem.h  Document.cpp  Document.h  DocumentItem.cpp  DocumentItem.h  Editor.h  IDocument.h  IParagraph.h  Menu.h  lab_5.vcxproj  lab_5.vcxproj.filters
lab_5_command_cpp/: CMakeLists.txt  ChangeStringCOmmand.cpp  Document.cpp  Document.h  Editor.cpp  Editor.h  History.cpp  History.h  ICommand.h  Image.cpp  Image.h  Menu.cpp  Paragraph.cpp  Paragraph.h  StringUtils.h  lab_5.sln  lab_5.vcxproj  lab_5.vcxproj.filters
lab_5_command_java/: build.gradle  settings.gradle
lab_6/: Graphic.h  GraphicsLib.h  GraphicsLibPro.h  ModernGraphicsLib.h  ModernGraphicsLibAdapter.h  ModernGraphicsLibClassAdapter.h  ModernGraphicsLibPro.h  ModernGraphicsLibProAdapter.h  ModernGraphicsLibProClassAdapter.h  ShapeDrawingLib.h  ShapeDrawingLibPro.h  lab_6.sln  lab_6.vcxproj  lab_6.vcxproj.filters  main.cpp
lab_7_composite_java/: build.gradle
lab_8_state_java/: build.gradle  settings.gradle
ood_lab_1/: main.cpp  ood_lab_1.vcxproj
ood_lab_1_3/: main.cpp  ood_lab_1_3.vcxproj
ood_lab_2/: Observer.h  WeatherData.h  main.cpp  ood_lab_2.vcxproj  ood_lab_2.vcxproj.filters
(+110 files in other folders)
